src - MTDEV2/objects/MT_MediaCampaign__c.object
<CustomObject>
    <fields>
        <fullName>MT_BMVDooH__c</fullName>
        <label>BMV DooH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BarterYield__c</fullName>
        <formula>IF(MT_BmvTv__c = 0, 0, MT_NetBarterVolume__c / MT_BmvTv__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Barter Yield</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_BmvDigital__c</fullName>
        <label>BMV Digital</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BmvTotalFix__c</fullName>
        <formula>MT_BmvTv__c + MT_BmvDigital__c + MT_BMVDooH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV gesamt</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BmvTvAsset__c</fullName>
        <formula>MT_BmvTv__c - MT_BmvTvCustomerIntegration__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BMV TV Asset</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BmvTvCustomerIntegration__c</fullName>
        <label>BMV TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_BmvTv__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Working value for the BMV (TV). Copied from the Opp Approval until approval is done, afterwards source of truth.</description>
        <label>BMV gesamt (TV)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_CashZahlung__c</fullName>
        <label>Cash Zahlung</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_ContractEnddate__c</fullName>
        <label>Vertragsende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_ContractStartdate__c</fullName>
        <label>Vertragsbeginn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_EigenerBuchwertinEUR__c</fullName>
        <label>Eigenkapital Buchwert</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_ExitParticipation__c</fullName>
        <label>Exit Participation</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_FillUp__c</fullName>
        <label>Fill-Up</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_MonthlyPayment__c</fullName>
        <label>Fixe monatliche Einnahmen</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_Type__c</fullName>
        <label>Fixe Umsatzart</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_FixRevenueTypes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_FixRevenue_Yield__c</fullName>
        <formula>IF(ISPICKVAL(MT_FixRevenue_Type__c, &quot;Yield&quot;), MT_YieldGesamtFixTV__c, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixer Umsatz Yield (TV)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_GrossBarterVolume__c</fullName>
        <label>Brutto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_HasMediaDigital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Digital (71M)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_HasMediaDooH__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DooH (7Screen)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_HasMediaTV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>TV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_IMAMail__c</fullName>
        <label>IMA Verteiler</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>MT_IsContractSigned__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract signed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_IsOverbooking__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Overbooking?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_KRSID__c</fullName>
        <externalId>true</externalId>
        <label>KRS ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MT_MediaCampaignType_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Media Campaign Type</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>((1 AND 2) OR (3 AND 4)) AND 5</booleanFilter>
            <filterItems>
                <field>MT_MediaCampaignType__c.MT_Type__c</field>
                <operation>equals</operation>
                <value>Internal</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>Internal Media Campaign</value>
            </filterItems>
            <filterItems>
                <field>MT_MediaCampaignType__c.MT_Type__c</field>
                <operation>equals</operation>
                <value>External</value>
            </filterItems>
            <filterItems>
                <field>$Source.RecordTypeId</field>
                <operation>equals</operation>
                <value>External Media Campaign</value>
            </filterItems>
            <filterItems>
                <field>MT_MediaCampaignType__c.MT_IsActive__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MT_MediaCampaignType__c</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>Media_Campaigns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Mn3TvCustomerIntegration__c</fullName>
        <label>MN3 TV Kundenintegration</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_NetBarterVolume__c</fullName>
        <label>Netto-Barter-Volumen</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_HasMediaBarter__c</fullName>
        <formula>MT_OpportunityApproval_ref__r.P7S1_HasMediaBarter__c</formula>
        <label>Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_OppApp_HasMediaPartBarter__c</fullName>
        <formula>MT_OpportunityApproval_ref__r.P7S1_HasMediaPartBarter__c</formula>
        <label>Teil-Barter</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MT_OpportunityApprovalStatus__c</fullName>
        <formula>TEXT(MT_OpportunityApproval_ref__r.P7S1_ApprovalState__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_OpportunityApproval_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity Freigabe</label>
        <referenceTo>P7S1_OpportunityApproval__c</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>Media_Campaigns</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Opportunity_AccountId__c</fullName>
        <formula>CASESAFEID(MT_Opportunity_ref__r.AccountId)</formula>
        <label>Opportunity Account Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_Opportunity_ref__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Media Campaigns</relationshipLabel>
        <relationshipName>Media_Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_Responsible_IM_Agent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Media Agency Contact</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Only users with the P7S1 Internal Agency role can be responsible internal media agents for a campaign.</errorMessage>
            <filterItems>
                <field>User.UserRole.DeveloperName</field>
                <operation>equals</operation>
                <value>P7S1_InternalAgency</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>MT_ResponsibleForMediaCampaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeTVEnd__c</fullName>
        <label>Ende Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_RunTimeTVStart__c</fullName>
        <label>Start Laufzeit (TV)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_SYS_AccountOwnerUnit__c</fullName>
        <label>Sys Account Owner Unit</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_SpotAssetanteil__c</fullName>
        <formula>1 - MT_SpotKundenintegrationsanteil__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spot Assetanteil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_SpotKundenintegrationsanteil__c</fullName>
        <formula>IF(MT_TvSpotLength__c = 0, 0, (MT_TvSpotLengthCustomer__c / MT_TvSpotLength__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spot Kundenintegrationsanteil</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MT_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Planning final</fullName>
                </value>
                <value>
                    <fullName>Campaign approved</fullName>
                </value>
                <value>
                    <fullName>Campaign changed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>In Approvals</fullName>
                </value>
                <value>
                    <fullName>Contract signed</fullName>
                    <isActive>false</isActive>
                    <label>Contract signed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_Sys_BuildingBlockMatrix__c</fullName>
        <formula>IF( MT_HasMediaTV__c , &apos;1&apos;, &apos;0&apos;)+ IF(  MT_HasMediaDigital__c  , &apos;1&apos;, &apos;0&apos;) + IF(  MT_HasMediaDooH__c  , &apos;1&apos;, &apos;0&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MT_Sys_BuildingBlockMatrix</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_Sys_ContractOrTVRuntimeEnd__c</fullName>
        <formula>IF(ISBLANK(MT_ContractEnddate__c), MT_RunTimeTVEnd__c, MT_ContractEnddate__c)</formula>
        <label>Sys Contract Or TV Runtime End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_Sys_ContractOrTVRuntimeStart__c</fullName>
        <formula>IF(ISBLANK(MT_ContractStartdate__c), MT_RunTimeTVStart__c, MT_ContractStartdate__c)</formula>
        <label>Sys Contract Or TV Runtime Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MT_Sys_OppApp_ID__c</fullName>
        <description>Contains the ID of the related opportunity approval. Unique to prevent an opportunity approval from having multiple media campaigns.</description>
        <label>Sys Opportunity Approval ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MT_Sys_OppApp_OpportunityRefId__c</fullName>
        <formula>MT_OpportunityApproval_ref__r.P7S1_Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys OppApp OpportunityRefId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_TvSpotLengthAsset__c</fullName>
        <formula>MT_TvSpotLength__c - MT_TvSpotLengthCustomer__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assetanteil Spotlänge (in Sekunden)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_TvSpotLengthCustomer__c</fullName>
        <label>Kundenanteil Spotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_TvSpotLength__c</fullName>
        <label>Gesamtspotlänge (in Sekunden)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_Type__c</fullName>
        <formula>MT_MediaCampaignType_ref__r.Name</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_RevenuePerUnit__c</fullName>
        <label>Var. Umsatz 1 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldAmount__c</fullName>
        <label>Var. Umsatz 1 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldProduct__c</fullName>
        <label>Var. Umsatz 1 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_SoldUnit__c</fullName>
        <label>Var. Umsatz 1 - Verkaufseinheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_ProductSalesUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue1_TotalRevenue__c</fullName>
        <formula>MT_VariableRevenue1_RevenuePerUnit__c * MT_VariableRevenue1_SoldAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 1 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_RevenuePerUnit__c</fullName>
        <label>Var. Umsatz 2 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldAmount__c</fullName>
        <label>Var. Umsatz 2 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldProduct__c</fullName>
        <label>Var. Umsatz 2 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_SoldUnit__c</fullName>
        <label>Var. Umsatz 2 - Verkaufseinheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_ProductSalesUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue2_TotalRevenue__c</fullName>
        <formula>MT_VariableRevenue2_RevenuePerUnit__c * MT_VariableRevenue2_SoldAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 2 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_RevenuePerUnit__c</fullName>
        <label>Var. Umsatz 3 - Umsatz pro Einheit</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldAmount__c</fullName>
        <label>Var. Umsatz 3 - Verkaufte Anzahl</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldProduct__c</fullName>
        <label>Var. Umsatz 3 - Verkauftes Produkt</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_SoldUnit__c</fullName>
        <label>Var. Umsatz 3 - Verkaufseinheit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_ProductSalesUnit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue3_TotalRevenue__c</fullName>
        <formula>MT_VariableRevenue3_RevenuePerUnit__c * MT_VariableRevenue3_SoldAmount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Var. Umsatz 3 - Gesamtumsatz</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MT_VariableRevenue_ConsiderationPeriod__c</fullName>
        <label>Betrachtungszeitraum Variabler Yield</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>MT_YieldConsiderationPeriods</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>MT_YieldGesamtFixTV__c</fullName>
        <formula>IF(MT_BmvTv__c = 0, 0, (MT_Mn3TvCustomerIntegration__c / MT_BmvTv__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yield gesamt fix (TV)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <label>Media Transparency Campaign</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MT_ContractStartdate__c</columns>
        <columns>MT_ContractEnddate__c</columns>
        <columns>MT_RunTimeTVStart__c</columns>
        <columns>MT_RunTimeTVEnd__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Kampagnenname</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Media Transparency Campaigns</pluralLabel>
    <recordTypes>
        <fullName>MT_ExternalMediaCampaign</fullName>
        <active>true</active>
        <label>External Media Campaign</label>
    </recordTypes>
    <recordTypes>
        <fullName>MT_InternalMediaCampaign</fullName>
        <active>true</active>
        <label>Internal Media Campaign</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>MT_AssetMatch_CampType_vs_OppApp</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
  ISBLANK(MT_OpportunityApproval_ref__r.MT_Asset_ref__c),
  TEXT(MT_OpportunityApproval_ref__r.P7S1_internerPartner__c) &lt;&gt; MT_MediaCampaignType_ref__r.MT_Asset_ref__r.Name,
  MT_OpportunityApproval_ref__r.MT_Asset_ref__c &lt;&gt; MT_MediaCampaignType_ref__r.MT_Asset_ref__c
)</errorConditionFormula>
        <errorDisplayField>MT_MediaCampaignType_ref__c</errorDisplayField>
        <errorMessage>Der Kampagnentyp muss zum gleichen Asset gehören wie der interne Partner auf der Opportunity Freigabe.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_CampaignInContract</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
NOT ( ISBLANK ( MT_ContractStartdate__c ) ),
NOT ( ISBLANK ( MT_ContractEnddate__c ) ),
OR(
MT_OpportunityApproval_ref__r.P7S1_OppKampagnenstart__c &lt; MT_ContractStartdate__c ,
MT_OpportunityApproval_ref__r.P7S1_OppKampagnenende__c &gt; MT_ContractEnddate__c
)
)</errorConditionFormula>
        <errorMessage>Achtung Kampagnenlaufzeit muss innerhalb Vertragslaufzeit sein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_CheckIfCampaignOppAppIsApproved</fullName>
        <active>true</active>
        <description>Only allow the checkbox to be checked if Campaign Status is &quot;Campaign approved&quot; AND OpportunityApproval ApprovalState is &quot;Genehmigt&quot;</description>
        <errorConditionFormula>IF(AND(
ISPICKVAL(MT_Status__c,&quot;Campaign approved&quot;),
ISPICKVAL(MT_OpportunityApproval_ref__r.P7S1_ApprovalState__c ,&quot;Genehmigt&quot;)),
FALSE,IF(MT_IsContractSigned__c,NOT(ISCHANGED(MT_Status__c)),FALSE)
)</errorConditionFormula>
        <errorDisplayField>MT_IsContractSigned__c</errorDisplayField>
        <errorMessage>Sowohl die Kampagne als auch die Opportunity Freigabe muss genehmigt sein um dieses Feld zu ändern.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_KeinGrossBarterVolOhneBarter</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(MT_GrossBarterVolume__c)), NOT(MT_OppApp_HasMediaBarter__c),NOT(MT_OppApp_HasMediaPartBarter__c))</errorConditionFormula>
        <errorDisplayField>MT_GrossBarterVolume__c</errorDisplayField>
        <errorMessage>Es darf kein Barter-Volumen eingetragen werden, wenn kein Barter aktiviert ist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_KeinNetBarterVolOhneBarter</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(MT_NetBarterVolume__c)), NOT(MT_OppApp_HasMediaBarter__c),NOT(MT_OppApp_HasMediaPartBarter__c))</errorConditionFormula>
        <errorDisplayField>MT_NetBarterVolume__c</errorDisplayField>
        <errorMessage>Es darf kein Barter-Volumen eingetragen werden, wenn kein Barter aktiviert ist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_PflichtLaufzeitTVEnd</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
MT_HasMediaTV__c = TRUE ,
ISBLANK( MT_RunTimeTVEnd__c )
)</errorConditionFormula>
        <errorDisplayField>MT_RunTimeTVEnd__c</errorDisplayField>
        <errorMessage>Laufzeit Ende (TV) ist Pflichtangabe bei Medien-Baustein TV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_PflichtLaufzeitTVStart</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
MT_HasMediaTV__c = TRUE ,
ISBLANK( MT_RunTimeTVStart__c )
)</errorConditionFormula>
        <errorDisplayField>MT_RunTimeTVStart__c</errorDisplayField>
        <errorMessage>Laufzeit Start (TV) ist Pflichtangabe bei Medien-Baustein TV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_PflichtfeldBmvTv</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
MT_HasMediaTV__c = TRUE ,
OR(
ISBLANK( MT_BmvTv__c ),
MT_BmvTv__c &lt;= 0)
)</errorConditionFormula>
        <errorDisplayField>MT_BmvTv__c</errorDisplayField>
        <errorMessage>BMV TV ist Pflichtangabe bei Medien-Baustein TV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_PflichtfeldBmvTvCustInt</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
MT_HasMediaTV__c = TRUE ,
OR(
ISBLANK( MT_BmvTvCustomerIntegration__c ),
MT_BmvTvCustomerIntegration__c &lt;= 0),
RecordType.DeveloperName &lt;&gt; &apos;MT_InternalMediaCampaign&apos;
)</errorConditionFormula>
        <errorDisplayField>MT_BmvTvCustomerIntegration__c</errorDisplayField>
        <errorMessage>BMV TV Kundenintegration ist Pflichtangabe bei Medien-Baustein TV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_PflichtfeldGrossBarterVol</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
MT_OppApp_HasMediaBarter__c = TRUE, 
MT_OppApp_HasMediaPartBarter__c = TRUE 
), 
OR( 
MT_GrossBarterVolume__c &lt;= 0 , 
ISBLANK (MT_GrossBarterVolume__c )),
RecordType.DeveloperName &lt;&gt; &apos;MT_InternalMediaCampaign&apos;
)</errorConditionFormula>
        <errorDisplayField>MT_GrossBarterVolume__c</errorDisplayField>
        <errorMessage>Barter-Volumen ist Pflichtangabe, wenn aktiv.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_PflichtfeldMn3TvCustInt</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
MT_HasMediaTV__c = TRUE ,
OR(
ISBLANK( MT_Mn3TvCustomerIntegration__c ),
MT_Mn3TvCustomerIntegration__c &lt;= 0),
RecordType.DeveloperName &lt;&gt; &apos;MT_InternalMediaCampaign&apos;
)</errorConditionFormula>
        <errorDisplayField>MT_Mn3TvCustomerIntegration__c</errorDisplayField>
        <errorMessage>MN3 TV Kundenintegration ist Pflichtangabe bei Medien-Baustein TV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_PflichtfeldNetBarterVol</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR( 
MT_OppApp_HasMediaBarter__c = TRUE, 
MT_OppApp_HasMediaPartBarter__c = TRUE 
), 
OR( 
MT_NetBarterVolume__c &lt;= 0 , 
ISBLANK (MT_NetBarterVolume__c )),
RecordType.DeveloperName &lt;&gt; &apos;MT_InternalMediaCampaign&apos; 
)</errorConditionFormula>
        <errorDisplayField>MT_NetBarterVolume__c</errorDisplayField>
        <errorMessage>Barter-Volumen ist Pflichtangabe, wenn aktiv.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_PflichtfeldTvSpotLenCust</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
MT_HasMediaTV__c = TRUE ,
OR(
ISBLANK( MT_TvSpotLengthCustomer__c ),
MT_TvSpotLengthCustomer__c &lt;= 0),
RecordType.DeveloperName &lt;&gt; &apos;MT_InternalMediaCampaign&apos;
)</errorConditionFormula>
        <errorDisplayField>MT_TvSpotLengthCustomer__c</errorDisplayField>
        <errorMessage>Kundenanteil Spotlänge (in Sekunden) ist Pflichtangabe bei Medien-Baustein TV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MCamp_PflichtfeldTvSpotLength</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
MT_HasMediaTV__c = TRUE ,
OR(
ISBLANK( MT_TvSpotLength__c ),
MT_TvSpotLength__c &lt;= 0),
RecordType.DeveloperName &lt;&gt; &apos;MT_InternalMediaCampaign&apos;
)</errorConditionFormula>
        <errorDisplayField>MT_TvSpotLength__c</errorDisplayField>
        <errorMessage>Gesamtspotlänge (in Sekunden) ist Pflichtangabe bei Medien-Baustein TV</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_MediaCampaign_SameOppAndOppAppLookup</fullName>
        <active>true</active>
        <description>Checks if the related opportunity approval belongs to the same opportunity as related here on this campaign.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(MT_Opportunity_ref__c)), NOT(ISBLANK(MT_OpportunityApproval_ref__c)), MT_Opportunity_ref__c !=  MT_OpportunityApproval_ref__r.P7S1_Opportunity__c)</errorConditionFormula>
        <errorDisplayField>MT_OpportunityApproval_ref__c</errorDisplayField>
        <errorMessage>Die ausgewählte Opportunity Freigabe bezieht sich nicht auf die ausgewählte Opportunity.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_PreventFixedMonthlyPaymentIfDisabled</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
NOT ( ISBLANK ( MT_FixRevenue_MonthlyPayment__c ) ) ,
NOT ( ISPICKVAL( MT_FixRevenue_Type__c , &apos;Payment&apos; ) )
)</errorConditionFormula>
        <errorDisplayField>MT_FixRevenue_MonthlyPayment__c</errorDisplayField>
        <errorMessage>Eine Summe darf nur angegeben werden, wenn fixe Zahlung ausgewählt ist.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_RequiredValueForFixedMonthlyPayment</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISBLANK ( MT_FixRevenue_MonthlyPayment__c ),
ISPICKVAL( MT_FixRevenue_Type__c , &apos;Payment&apos; )
)</errorConditionFormula>
        <errorDisplayField>MT_FixRevenue_MonthlyPayment__c</errorDisplayField>
        <errorMessage>Wenn fixe Zahlung ausgewählt ist muss eine Summe angegeben werden.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VariableRevenue1_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(
IF( ISBLANK ( MT_VariableRevenue1_RevenuePerUnit__c ) , 0 , 1)
+
IF( ISPICKVAL ( MT_VariableRevenue1_SoldUnit__c , &apos;&apos;) , 0 , 1)
+
IF( ISBLANK ( MT_VariableRevenue1_SoldAmount__c ) , 0 , 1)
)
!= 0 ,
(
IF( ISBLANK ( MT_VariableRevenue1_RevenuePerUnit__c ) , 0 , 1)
+
IF( ISPICKVAL ( MT_VariableRevenue1_SoldUnit__c , &apos;&apos;) , 0 , 1)
+
IF( ISBLANK ( MT_VariableRevenue1_SoldAmount__c ) , 0 , 1)
)
!= 3
)</errorConditionFormula>
        <errorDisplayField>MT_VariableRevenue1_SoldAmount__c</errorDisplayField>
        <errorMessage>Bitte für den Variablen Umsatz immer alle drei Werte für Anzahl, Umsatzart und den Umsatzanteil ausfüllen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VariableRevenue1_RevPerUnit_MinValue</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(MT_VariableRevenue1_RevenuePerUnit__c)), MT_VariableRevenue1_RevenuePerUnit__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>MT_VariableRevenue1_RevenuePerUnit__c</errorDisplayField>
        <errorMessage>Bitte geben Sie einen Umsatz pro Einheit über 0 € ein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VariableRevenue1_SoldAmount_MinValue</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(MT_VariableRevenue1_SoldAmount__c)), MT_VariableRevenue1_SoldAmount__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>MT_VariableRevenue1_SoldAmount__c</errorDisplayField>
        <errorMessage>Bitte geben Sie eine Anzahl &gt; 0 ein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VariableRevenue2_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(
IF( ISBLANK ( MT_VariableRevenue2_RevenuePerUnit__c ) , 0 , 1)
+
IF( ISPICKVAL ( MT_VariableRevenue2_SoldUnit__c , &apos;&apos;) , 0 , 1)
+
IF( ISBLANK ( MT_VariableRevenue2_SoldAmount__c ) , 0 , 1)
)
!= 0 ,
(
IF( ISBLANK ( MT_VariableRevenue2_RevenuePerUnit__c ) , 0 , 1)
+
IF( ISPICKVAL ( MT_VariableRevenue2_SoldUnit__c , &apos;&apos;) , 0 , 1)
+
IF( ISBLANK ( MT_VariableRevenue2_SoldAmount__c ) , 0 , 1)
)
!= 3
)</errorConditionFormula>
        <errorDisplayField>MT_VariableRevenue2_SoldAmount__c</errorDisplayField>
        <errorMessage>Bitte für den Variablen Umsatz immer alle drei Werte für Anzahl, Umsatzart und den Umsatzanteil ausfüllen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VariableRevenue2_RevPerUnit_MinValue</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(MT_VariableRevenue2_RevenuePerUnit__c)), MT_VariableRevenue2_RevenuePerUnit__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>MT_VariableRevenue2_RevenuePerUnit__c</errorDisplayField>
        <errorMessage>Bitte geben Sie einen Umsatz pro Einheit über 0 € ein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VariableRevenue2_SoldAmount_MinValue</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(MT_VariableRevenue2_SoldAmount__c)), MT_VariableRevenue2_SoldAmount__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>MT_VariableRevenue2_SoldAmount__c</errorDisplayField>
        <errorMessage>Bitte geben Sie eine Anzahl &gt; 0 ein.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VariableRevenue3_Complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
(
IF( ISBLANK ( MT_VariableRevenue3_RevenuePerUnit__c ) , 0 , 1)
+
IF( ISPICKVAL ( MT_VariableRevenue3_SoldUnit__c , &apos;&apos;) , 0 , 1)
+
IF( ISBLANK ( MT_VariableRevenue3_SoldAmount__c ) , 0 , 1)
)
!= 0 ,
(
IF( ISBLANK ( MT_VariableRevenue3_RevenuePerUnit__c ) , 0 , 1)
+
IF( ISPICKVAL ( MT_VariableRevenue3_SoldUnit__c , &apos;&apos;) , 0 , 1)
+
IF( ISBLANK ( MT_VariableRevenue3_SoldAmount__c ) , 0 , 1)
)
!= 3
)</errorConditionFormula>
        <errorDisplayField>MT_VariableRevenue3_SoldAmount__c</errorDisplayField>
        <errorMessage>Bitte für den Variablen Umsatz immer alle drei Werte für Anzahl, Umsatzart und den Umsatzanteil ausfüllen</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>MT_VariableRevenue3_RevPerUnit_MinValue</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(MT_VariableRevenue3_RevenuePerUnit__c)), MT_VariableRevenue3_RevenuePerUnit__c &lt;= 0)</errorConditionFormula>
        <errorDisplayField>MT_VariableRevenue3_RevenuePerUnit__c</errorDisplayField>
        <errorMessage>Bitte geben Sie einen Umsatz pro Einheit über 0 € ein.</errorMessage>
    </validationRules>
</CustomObject>